# mouse-keepalive

./: .gitignore  .mergify.yml  .npmignore  .release-please-manifest.json  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  PUBLISH.md  README.md  README_EN.md  RELEASE.md  SETUP_GITHUB.md  move-mouse.ps1  move-mouse.py  move-mouse.sh  move_mouse.bat  move_mouse.sh  package.json  pyproject.toml  release-please-config.json  renovate.json
.github/actions/: README.md
.github/actions/lint/: action.yml
.github/actions/publish/: action.yml
.github/actions/release/: action.yml
.github/actions/test/: action.yml
.github/workflows/: README.md  auto-approve-pr-target.yml  build-release-assets.yml  ci.yml  lint.yml  publish.yml  release-please.yml  release.yml  renovate-auto-approve.yml  version-bump.yml
auto_mouse_mover/: __init__.py  __main__.py  move_mouse.py
lib/: moveMouse.js
mouse_keepalive/: __init__.py  __main__.py  move_mouse.py
tests/: conftest.py  test_move_mouse.py
