[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-mouse-mover"
version = "1.0.0"
description = "A cross-platform tool to automatically move the mouse at specified intervals to prevent system sleep or lock"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "motoish"}
]
keywords = [
    "mouse",
    "automation",
    "prevent-sleep",
    "idle",
    "keep-alive",
    "cross-platform",
    "cli",
    "tool",
    "macos",
    "windows",
    "linux"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
dependencies = [
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
dev = [
    "flake8>=6.0.0",
    "black>=23.0.0",
    "pylint>=2.17.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
mouse-keepalive = "mouse_keepalive:main"
mka = "mouse_keepalive:main"

[project.urls]
Homepage = "https://github.com/motoish/mouse-keepalive"
Documentation = "https://github.com/motoish/mouse-keepalive#readme"
Repository = "https://github.com/motoish/mouse-keepalive"
Issues = "https://github.com/motoish/mouse-keepalive/issues"

[tool.setuptools]
packages = ["mouse_keepalive"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "pyautogui.*"
ignore_missing_imports = true

